background-color-plat

--- a/style/pages/_restaurants.scss
+++ b/style/pages/_restaurants.scss
@@ -91,6 +91,7 @@
   .plats{
     margin-left: 10px;
     margin-right: 10px;
+    background-color: brown;
   }
   .dessert{
     margin-left: 10px;
