--- a/style/pages/_homepages.scss
+++ b/style/pages/_homepages.scss
@@ -65,6 +65,9 @@ body {
     margin-top: Opx;
     margin-bottom: 30px;
     }
+    .functioning{
+      background-color: #ffffff;
+    }
   .title-fonctioning{
     margin-left: 20px;
     margin-top: 40px;
