--- a/style/base/_variable.scss
+++ b/style/base/_variable.scss
@@ -2,5 +2,6 @@ $primary-color:#9356DC;
 $secondary-color:#FF79DA;
 $terciary-color:#99E2D0;
 $font-texte:system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
- 
+$lightgrey:#7e7e7e;
+$lightergrey: #F6F6F6;
+$button-widht:-3rem;
