--- a/style/utils/animations.scss
+++ b/style/utils/animations.scss
@@ -29,3 +29,51 @@
     transform: scale(1.2);
 
   }
+  .loader{
+    $animation-duration: 1s;
+    $animation-count: 3;
+    background-color: white;
+    height: 100vh;
+    position: fixed;
+    display: grid;
+    place-items:center;
+    inset: 0;
+    z-index: 1;
+    opacity: 0.9;
+    animation: disappear 200ms $animation-duration * $animation-count forwards;
+    transform-origin: top;
+    &::after{
+      content:"";
+      height: 100px;
+      width: 100px;
+      border-right: 5px solid $secondary-color;
+      border-left: 5px solid $terciary-color;
+      border-top: 5px solid $primary-color;
+      border-radius: 50%;
+      animation: spin $animation-duration  ease-in-out;
+      animation-iteration-count: 3;
+    
+    }
+  }
+  @keyframes disappear {
+    0%{
+      transform: scale(1);
+    }
+    100%{
+      transform: scale(0);
+    }
+  }
+  @keyframes spin {
+    to{
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes quarter-spin {
+    0%{
+      transform: rotate(-270deg);
+    }
+    100%{
+      transform:rotate(0);
+    }
+  }
+  
