--- a/style/pages/_restaurants.scss
+++ b/style/pages/_restaurants.scss
@@ -2,14 +2,10 @@
 body{
   background-color:$lightergrey;
 }
-.main-restaurants{
-  height: 1200px;
+.resto-main{
+  height: 800px;
 }
-.menu{
-    width: 100%;
-    background:#f2f2f2;
-    border-radius: 20px 20px 0px 0px;
-  }
+
   .title-principal{
     font-family: Shrikhand;
     text-align: center;
@@ -47,28 +43,29 @@ body{
   
   .heart{
     margin-bottom: 20px;
-  }
-  .title h3 h4{
-    font-family: $font-texte;
-  }
-  h3{
-    font-weight: 600;
-    margin: inherit;
-    margin-left: 10px;
-    margin-top: 10px;
   
   }
+   .empty {
+    padding-left: 10px;
+   }
+   .full{
+    padding-left: 10px;
+   }
   h4{
+    font-family: $font-texte;
+    font-weight: 600;
+    margin: inherit;
+  
+  }
+  p{
     font-weight: 300;
     margin: 0px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    
-
-  
-  }
-  .title{
+    }
+  h3{
+    font-family: $font-texte;
     font-weight: 300;
     font-size: 16px;
     margin-top: 10px;
@@ -77,34 +74,11 @@ body{
     margin-left: 10px;
     width:30px;
   }
-  .price{
+  .prix{
     font-weight: 600;
     margin-right: 10px;
   }
-  .text-price{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .dish{
-    width: 100%;
-    background: white;
-    border-radius:20px;
-    box-shadow: 10px 10px 10px #dedede;
-    height: 66px;
-  }
-  .entry{
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  .plats{
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  .dessert{
-     margin-left: 10px;
-    margin-right: 10px;
-  }
+  
   .btn-comm{
     width:100%;
     height: 49px;
@@ -117,7 +91,9 @@ body{
     box-shadow: 10px 10px 10px #dedede;
     margin-top: 20px;
   
-    
+   .bnt-comm:hover{
+    background-color:$secondary-color;
+    } 
   }
   .title-comm{
     width: 100%;
@@ -129,12 +105,11 @@ body{
     
   }
   .menus{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    grid-template-columns: 1fr;
     background-color:$lightergrey;
+
     .menus-category{
-      background-color: white;
+      background-color:#F6F6F6;
       border-radius: 20px;
       overflow: hidden;
       
@@ -209,8 +184,21 @@ body{
   
   
   @media screen and (min-width:992px){
+    h3{
+      
+    }
     .menus{
-      grid-template-columns: 1fr;
+    display: grid;
+    flex-direction:row;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
+      
+    }
+    .menus-category{
+      display:flex;
+      flex-direction: row;
+      justify-content: space-between;
+      
     }
     }
     
