--- a/style/utils/animations.scss
+++ b/style/utils/animations.scss
@@ -63,4 +63,13 @@
       transform:rotate(0);
     }
   }
+  @keyframes appear {
+    0%{
+      transform: scale(0);
+    }
+    100%{
+      transform: scale(1);
+    }
+    
+  }
   
