--- a/style/pages/_restaurants.scss
+++ b/style/pages/_restaurants.scss
@@ -21,8 +21,7 @@ body{
   .img-resto{
     display: block;
     width: 100%;
-    height: 40vh;
-    object-position:center-bottom;
+    height: 500px;
     object-fit: cover;
   
   }
@@ -123,7 +122,8 @@ body{
       background-color:#F6F6F6;
       border-radius: 20px;
       overflow: hidden;
-      display: inline;
+      display:flex;
+      flex-direction: column;
       
       }
       
