--- a/style/utils/animations.scss
+++ b/style/utils/animations.scss
@@ -7,7 +7,7 @@
     transition-property: all;
     transition-duration: 2s;
   }
-  .full:hover{
+  .full:active{
     opacity: 1;
     color:transparent ;
     background-clip: text;
