--- a/style/style.css
+++ b/style/style.css
@@ -475,6 +475,8 @@ h3 {
   white-space: nowrap;
 }
 .menus .menu-item {
+  margin-left: 10px;
+  margin-right: 10px;
   margin-bottom: 10px;
   white-space: nowrap;
   text-overflow: ellipsis;
