--- a/style/pages/_restaurants.scss
+++ b/style/pages/_restaurants.scss
@@ -159,6 +159,7 @@ body{
           white-space: nowrap;
         }
         .prix{
+          max-width: 100%;
           display: flex;
           align-self: flex-end;
           margin-left: auto;
@@ -202,20 +203,8 @@ body{
     }
 }
    
-
-  
-  
-  
-  
-  @media screen and (min-width:992px){
+@media screen and (min-width:992px){
     
-    .menus{
-    display: grid;
-    flex-direction:column;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
-      
-    }
     .menus-category{
       display:flex;
       flex-direction: row;
