--- a/style/style.css
+++ b/style/style.css
@@ -499,6 +499,7 @@ h3 {
   white-space: nowrap;
 }
 .menus .menu-item .prix {
+  max-width: 100%;
   display: flex;
   align-self: flex-end;
   margin-left: auto;
@@ -543,6 +544,7 @@ h3 {
   white-space: nowrap;
 }
 .menus .menu-item .prix {
+  max-width: 100%;
   display: flex;
   align-self: flex-end;
   margin-left: auto;
@@ -587,6 +589,7 @@ h3 {
   white-space: nowrap;
 }
 .menus .menu-item .prix {
+  max-width: 100%;
   display: flex;
   align-self: flex-end;
   margin-left: auto;
@@ -623,12 +626,6 @@ h3 {
 }
 
 @media screen and (min-width: 992px) {
-  .menus {
-    display: grid;
-    flex-direction: column;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
-  }
   .menus-category {
     display: flex;
     flex-direction: row;
