--- a/style/pages/_homepages.scss
+++ b/style/pages/_homepages.scss
@@ -5,24 +5,21 @@ body {
   main{
     background-color: white;
   }
-  .img {
-    width: 100%;
-    height: 170px;
-  }
+  .title-principal-accueil{
+    font-family: Shrikhand;
+    text-align: center;
+    margin-bottom: 5px;
+    flex-grow:1;
+    margin-top: 10px;
   
+  }
+    
   a {
     text-decoration: none;
     color: black;
   }
   
-  #logo {
-    width: 50%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 70px;
-    object-fit: cover;
   
-  }
   
   .search {
     width: 100%;
@@ -32,6 +29,7 @@ body {
     align-items: center;
     background-color: #dedede;
     height: 45px;
+    margin-bottom: 10px;
     }
   
   #icon-location {
