--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, Roboto, sans-serif;
 }
 
 main {
@@ -213,6 +213,12 @@ a {
   font-size: larger;
 }
 
+.test {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .name {
   margin: 0px;
   margin-left: 15px;
@@ -407,7 +413,7 @@ header {
 }
 
 h4 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, Roboto, sans-serif;
   font-weight: 600;
   margin: inherit;
 }
@@ -421,7 +427,7 @@ p {
 }
 
 h3 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, Roboto, sans-serif;
   font-weight: 300;
   font-size: 16px;
   margin-top: 10px;
@@ -650,7 +656,7 @@ h3 {
   transition-duration: 2s;
 }
 
-.full:active {
+.full:hover {
   opacity: 1;
   color: transparent;
   background-clip: text;
